fixed styles on small-mobile

--- a/client/src/components/Header/SideDrawer/SideDrawer.scss
+++ b/client/src/components/Header/SideDrawer/SideDrawer.scss
@@ -25,6 +25,10 @@
     @include for-mobile {
       width: 62%;
     }
+
+    @include for-small-mobile {
+      width: 70%;
+    }
   }
 
   &__list--active {
