--- a/client/src/components/Posts/PostItem/PostItem.scss
+++ b/client/src/components/Posts/PostItem/PostItem.scss
@@ -47,7 +47,11 @@
     top: 0.1rem;
 
     .dropdown__action--icon {
-      font-size: 1.5rem;
+      font-size: 1.4rem;
+
+      @include for-tablet {
+        font-size: 1.5rem;
+      }
     }
   }
 
@@ -73,6 +77,10 @@
 
     @include for-mobile {
       width: 80%;
+    }
+
+    @include for-small-mobile {
+      width: 23rem;
     }
   }
 
