--- a/client/src/utils/Modal/ConfirmModal/ConfirmModal.scss
+++ b/client/src/utils/Modal/ConfirmModal/ConfirmModal.scss
@@ -16,6 +16,14 @@
     justify-content: center;
     flex-direction: column;
     box-shadow: $box-shadow-2;
+
+    @include for-tablet {
+      padding: 4rem 5rem;
+    }
+
+    @include for-mobile {
+      padding: 3rem 4rem;
+    }
   }
 
   &__backdrop {
@@ -27,6 +35,10 @@
     flex-direction: column;
     gap: 2rem;
     margin-bottom: 2rem;
+
+    @include for-mobile {
+      margin-bottom: 1.7rem;
+    }
   }
 
   &__warning-icon {
@@ -48,6 +60,15 @@
     font-size: 1.4rem;
     font-weight: $font-regular;
     color: $color-black;
+    line-height: 1.2;
+
+    @include for-tablet {
+      font-size: 1.6rem;
+    }
+
+    @include for-mobile {
+      font-size: 1.4rem;
+    }
   }
 
   &__footer {
@@ -63,10 +84,19 @@
     font-weight: $font-semibold;
     padding: 0.8rem 1.3rem;
     font-size: 1.2rem;
+
+    @include for-tablet {
+      padding: 1rem 1.6rem;
+      font-size: 1.3rem;
+    }
   }
 
   &__btn--cancel {
     background-color: $color-gray-dark-3;
+  }
+
+  &__btn--cancel:hover {
+    background-color: $color-gray-dark-4;
   }
 
   &__btn--confirm {
